test to fix slider on ie

--- a/resources/scss/helpers/_crossbrowser.scss
+++ b/resources/scss/helpers/_crossbrowser.scss
@@ -1,6 +1,11 @@
 .edge, .ie {
   @include breakpoint(medium up) {
     .home-banner {
+
+      .slick-track {
+        display: block;
+      }
+      
       .slick-slide {
         display: block;
         max-width: inherit;
